--- a/config/services.yaml
+++ b/config/services.yaml
@@ -5,11 +5,11 @@
 # https://symfony.com/doc/current/best_practices.html#use-parameters-for-application-configuration
 parameters:
     default_admin_email: admin@example.com
-    default_domain: 127.0.0.1
+    default_domain: 127.0.0.1:8080
     default_scheme: http
 
-    router..request_context.host: '%env(string:default:default_domain:SYMFONY_DEFAULT_ROUTE_HOST)%'
-    router..request_context.scheme: '%env(string:default:default_scheme:SYMFONY_DEFAULT_ROUTE_SCHEME)%'
+    router.request_context.host: '%env(string:default:default_domain:SYMFONY_DEFAULT_ROUTE_HOST)%'
+    router.request_context.scheme: '%env(string:default:default_scheme:SYMFONY_DEFAULT_ROUTE_SCHEME)%'
 
 services:
     # default configuration for services in *this* file
@@ -37,3 +37,5 @@ services:
         tags:
             - { name: 'doctrine.orm.entity_listener', event: 'prePersist', entity: 'App\Entity\Conference' }
             - { name: 'doctrine.orm.entity_listener', event: 'preUpdate', entity: 'App\Entity\Conference' }
+
+    Symfony\Component\HttpKernel\HttpCache\StoreInterface: '@http_cache.store'
